# lensflare

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
examples/: lensflare_api_example.ipynb  numpy_api_example.ipynb  tensorflow_api_example.ipynb
src/lensflare/: __init__.py  classification.py
src/lensflare/funcs/: __init__.py  np_funcs.py  tf_funcs.py
src/lensflare/neural_network/: __init__.py  keras_models.py  np_models.py  tf_models.py
src/lensflare/util/: __init__.py  dependencies.py  load_simple_dataset.py  minibatching.py
