[project]
name = "lensflare"
version = "0.1.0"
description = "Educational deep learning library for understanding neural networks"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Gordon MacMillan"}
]
keywords = ["deep learning", "neural networks", "tensorflow", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "tensorflow>=2.15",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "h5py>=3.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
metal = [
    "tensorflow-metal>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "ipykernel>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lensflare"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
